--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,167 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+  font-family: 'Poppins', sans-serif;
+  background-color: #333333;
+  
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.app{
+  max-width: 500px;
+  background-color: #eeeeee;
+  margin: 0 auto;
+  margin-top:80px;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  padding:20px;
+}
+.header{
+  text-align: center;
+  background-color: #eeeeee;
+  font-size: 40px;
+}
+
+.other-content{
+  position: relative;
+  z-index: 2;
+  padding:10px;
+  background-color: #eeeeee;
+}
+
+.button-wrapper{
+  position:relative;
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  background-color: #eeeeee;
+}
+
+.open-button {
+  align-items: center;
+  background-clip: padding-box;
+  background-color: #bbbbbb;
+  border: 1px solid transparent;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.02) 0 1px 3px 0;
+  box-sizing: border-box;
+  color: black;
+  cursor: pointer;
+  display: inline-flex;
+  font-family: system-ui,-apple-system,system-ui,"Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+  justify-content: center;
+  line-height: 1.25;
+  margin: 0;
+  min-height: 3rem;
+  padding: calc(.875rem - 1px) calc(1.5rem - 1px);
+  position: relative;
+  text-decoration: none;
+  transition: all 250ms;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: baseline;
+  width: auto;
+  margin-top:20px;
+}
+
+.open-button:hover,
+.open-button:focus {
+  background-color: #888888;
+  box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
+}
+
+.open-button:hover {
+  transform: translateY(-1px);
+}
+
+.open-button:active {
+  background-color: #bbbbbb;
+  box-shadow: rgba(0, 0, 0, .06) 0 2px 4px;
+  transform: translateY(0);
+}
+
+.close-button {
+  height: 50px;
+  width: 50px;
+  position: absolute;
+  top:10px;
+  right:10px;
+  box-sizing: border-box;
+  line-height: 50px;
+  display: inline-block;
+  background-color: white;
+  cursor: pointer;
+}
+
+  .close-button:before, .close-button:after {
+      
+      transform: rotate(-45deg);
+      content: '';
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      margin-top: -5px;
+      margin-left: -25px;
+      display: block;
+      height: 5px;
+      width: 25px;
+      background-color: steelblue;
+      transition: all 0.25s ease-out;
+      border-radius: 10px;
+  }
+
+  .close-button:after {
+      transform: rotate(-135deg);
+      border-radius: 10px;
+      cursor: pointer;
+  }
+
+
+  .close-button:hover:before, .close-button:hover:after {
+    transform: rotate(0deg);
+}
+/* 
+Model and overlay */
+.model-container{
+  position: relative;
+}
+.modal{
+  background-color: #fff;
+  padding:50px;
+  z-index: 1000;
+  border-radius: 10px;
+  max-width: 400px;
+  position: fixed;
+  margin:0 auto;
+  top:10%;
+  left: 0;
+  right:0;
+  bottom:30%;
+}
+.overlay{
+  position: fixed;
+  top:0;
+  left: 0;
+  right:0;
+  bottom:0;
+  background-color: rgba(0, 0, 0, .7);
+  z-index: 1000;
+}
+
+/* fade animation */
+
+.fade-enter{
+  opacity: 0;
+}
+.fade-enter-active{
+  opacity: 1;
+  transition: opacity 700ms;
+}
+.fade-exit{
+  opacity: 1;
+  
+}
+.fade-exit-active{
+  opacity: 0;
+  transition: opacity 700ms;
 }
